<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnTemporada7"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="40dp"
        android:onClick="temporada7"
        android:text="@string/temporada_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemporada6" />

    <Button
        android:id="@+id/btnTemporada6"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada6"
        android:text="@string/temporada_6"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemporada5" />

    <Button
        android:id="@+id/btnTemporada4"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada4"
        android:text="@string/temporada_4"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemporada3" />

    <Button
        android:id="@+id/btnTemporada2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada2"
        android:text="@string/temporada_2"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btntemporada1" />

    <Button
        android:id="@+id/btntemporada1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada1"
        android:text="@string/temporada_1"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTemporada5"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada5"
        android:text="@string/temporada_5"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemporada4" />

    <Button
        android:id="@+id/btnTemporada3"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:onClick="temporada3"
        android:text="@string/temporada_3"
        app:layout_constraintBottom_toTopOf="@+id/btnTemporada4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemporada2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:text="@string/game_of_thones"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="33sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/btntemporada1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>